syntax = "proto3";

option java_multiple_files = true;
package proto.emergencyBloodRequests;
import "checkAvailable.proto";

message EmergencyRequest {
  CheckRequest request = 1;
}

message EmergencyResponse {
  CheckRequest request = 1;
  SendStatus status = 2;
}

enum SendStatus {
	  SENT = 0;
    DENIED = 1;
}