syntax = "proto3";

option java_multiple_files = true;
package proto.emergencyBloodRequests;
import "checkAvailable.proto";
import "emergencyRequest.proto";

service EmergencyRequestGrpcService {
	rpc requestBlood (EmergencyRequest) returns (EmergencyResponse);

	rpc checkIfBloodIsAvailable (CheckRequest) returns (CheckResponse);
}
